<resources>
    <string name="app_name">BeautySecret</string>
    <string name="already_have_an_account_login">Already have an account? Login</string>
    <string name="imageview">ImageView</string>
    <string name="register">Register</string>
    <string name="join_now">join now</string>
    <string name="beauty_secret">Beauty Secret</string>
    <string name="for_ladies"><i>For Ladies</i></string>
    <string name="username">Username</string>
    <string name="password">Password</string>
    <string name="login">Login</string>
    <string name="create_account">Create Account</string>
    <string name="phone_number">Phone number</string>
    <string name="confirm_password">Confirm password</string>
    <string name="require_name">Enter your name</string>
    <string name="require_phone">Enter your phone number</string>
    <string name="require_password">Enter your password</string>
    <string name="require_confirm_password">Enter your confirm password</string>
    <string name="password_matcher">Password didn\'t match</string>
    <string name="no_internet_connection">No internet connection</string>
    <string name="not_admin">I\'m not an Admin?</string>
    <string name="admin">I\'m an Admin?</string>
    <string name="login_admin">Login Admin</string>
    <string name="add_product">Add Product</string>
    <string name="product_name">Product Name</string>
    <string name="product_color">Product Color</string>
    <string name="product_price">Product Price</string>
    <string name="require_image">Product image is mandatory...</string>
    <string name="require_product_name">Please write product name...</string>
    <string name="require_product_color">Please write product color...</string>
    <string name="require_product_price">Please write product price...</string>

    <array name="brand_name">
        <item>MAYBELLINE</item>
        <item>LOREAL</item>
        <item>REVLON</item>
    </array>
    <array name="category_name">
        <item>EYE COSMETICS</item>
        <item>FACE COSMETICS</item>
        <item>LIP COSMETICS</item>
    </array>
    <!--eyes-->
    <array name="maybelline_eye_category_name">
        <item>BROW FAST SHAPES EYEBROW</item>
        <item>TATTOOSTUDIO BROW</item>
        <item>TATTOOSTUDIO BROW TINT PEN</item>
        <item>LASTING MATTE LACQUER GEL EYELINER</item>
    </array>
    <array name="loreal_eye_category_name">
        <item>ORIGINAL WASHABLE BOLD EYE MASCARA</item>
        <item>LONGWEAR WATERPROOF BROW GEL</item>
        <item>MICRO INK PEN</item>
        <item>LIQUID DIP EYELINER WATERPROOF</item>
    </array>
    <array name="revlon_eye_category_name">
        <item>COLORSTAY BROW MOUSSE</item>
        <item>COLORSTAY EYELINER</item>
        <item>REVLON ULTIMATE ALL-IN-ONE MASCARA</item>
        <item>REVLON VOLUMAZING MASCARA</item>
    </array>

    <!--face-->
    <array name="maybelline_face_category_name">
        <item>Dream URBAN Cover Full Coverage Foundation</item>
        <item>CHEEK HEAT GEL CREAM BLUSH</item>
        <item>FIT ME BLUSH</item>
        <item>SUPERSTAY FULL COVERAGE POWDER</item>
    </array>
    <array name="loreal_face_category_name">
        <item>INFALLIBLE FULL WEAR CONCEALER</item>
        <item>TRUE MATCH CRAYON CONCEALER</item>
        <item>TRUE MATCH LIQUID CONCEALER</item>
        <item>INFALLIBLE 24 H FRESH WEAR FOUNDATION</item>
    </array>
    <array name="revlon_face_category_name">
        <item>PHOTOREADY CHEEK FLUSHING TINT</item>
        <item>COLORSTAY ENDLESS GLOW LIQUID HIGHLIGHTER</item>
        <item>COLORSTAY CONCEALER</item>
        <item>PHOTOREADY CONCEALER</item>
    </array>

    <!--lip-->
    <array name="maybelline_lip_category_name">
        <item>COLOR SENSATIONAL MATTE LIPSTICK</item>
        <item>LIPSTUDIO PLUMPER LIPSTICK</item>
        <item>SUPERSTAY INK CRAYON LIPSTICK</item>
        <item>SUPERSTAY MATTE INK LIQUID LIPSTICK COFFEE EDITION</item>
    </array>
    <array name="loreal_lip_category_name">
        <item>8 HR LE GLOSS</item>
        <item>COLOUR RICHE</item>
        <item>MATTE LIP CRAYON LASTING WEAR</item>
        <item>ROUGE SIGNATURE MATTE LIP STAIN</item>
    </array>
    <array name="revlon_lip_category_name">
        <item>COLORSTAY ULTIMATE LIPSTICK</item>
        <item>REVLON CUSHION LIP TINT</item>
        <item>REVLON ULTRA HD MATTE LIPCOLOR</item>
        <item>SUPER LUSTROUS LIPSTICK</item>
    </array>
    <string name="title_activity_home">HomeActivity</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>

    <string name="home_second">Home Second</string>
    <string name="cart">Cart</string>
    <string name="orders">Orders</string>
    <string name="logout">Logout</string>
    <string name="l_oreal_paris">L\'OREAL PARIS</string>
    <string name="loreal">LOREAL</string>
    <string name="revlon">REVLON</string>
    <string name="brands">BRANDS</string>
    <string name="maybelline">MAYBELLINE</string>
    <string name="maybelline_brands">MAYBELLINE BRANDS</string>
    <string name="lip_consmetic_title">LIP COSMETICS</string>
    <string name="eye_consmetic_title">EYE COSMETICS</string>
    <string name="face_consmetic_title">FACE COSMETICS</string>
    <string name="brow_fast_shapes_eyebrow">BROW FAST SHAPES EYEBROW</string>
    <string name="tattoostudio_brow">TATTOOSTUDIO BROW</string>
    <string name="tattoostudio_brow_tint_pen">TATTOOSTUDIO BROW TINT PEN</string>
    <string name="lasting_matte_lacquer_gel_eyeliner">LASTING MATTE LACQUER GEL EYELINER</string>
    <string name="dream_urban_cover_full_coverage_foundation">Dream URBAN Cover Full Coverage Foundation</string>
    <string name="cheek_heat_gel_cream_blush">CHEEK HEAT GEL CREAM BLUSH</string>
    <string name="fit_me_blush">FIT ME BLUSH</string>
    <string name="superstay_full_coverage_powder">SUPERSTAY FULL COVERAGE POWDER</string>
    <string name="color_sensational_matte_lipstick">COLOR SENSATIONAL MATTE LIPSTICK</string>
    <string name="lipstudio_plumper_lipstick">LIPSTUDIO PLUMPER LIPSTICK</string>
    <string name="superstay_ink_crayon_lipstick">SUPERSTAY INK CRAYON LIPSTICK</string>
    <string name="superstay_matte_ink_liquid_lipstick_coffee_edition">SUPERSTAY MATTE INK LIQUID LIPSTICK COFFEE EDITION</string>
    <string name="original_washable_bold_eye_mascara">ORIGINAL WASHABLE BOLD EYE MASCARA</string>
    <string name="longwear_waterproof_brow_gel">LONGWEAR WATERPROOF BROW GEL</string>
    <string name="micro_ink_pen">MICRO INK PEN</string>
    <string name="liquid_dip_eyeliner_waterproof">LIQUID DIP EYELINER WATERPROOF</string>
    <string name="infallible_full_wear_concealer">INFALLIBLE FULL WEAR CONCEALER</string>
    <string name="true_match_crayon_concealer">TRUE MATCH CRAYON CONCEALER</string>
    <string name="true_match_liquid_concealer">TRUE MATCH LIQUID CONCEALER</string>
    <string name="infallible_24_h_fresh_wear_foundation">INFALLIBLE 24 H FRESH WEAR FOUNDATION</string>
    <string name="_8_hr_le_gloss">8 HR LE GLOSS</string>
    <string name="colour_riche">COLOUR RICHE</string>
    <string name="matte_lip_crayon_lasting_wear">MATTE LIP CRAYON LASTING WEAR</string>
    <string name="rouge_signature_matte_lip_stain">ROUGE SIGNATURE MATTE LIP STAIN</string>
    <string name="colorstay_brow_mousse">COLORSTAY BROW MOUSSE</string>
    <string name="colorstay_eyeliner">COLORSTAY EYELINER</string>
    <string name="revlon_ultimate_all_in_one_mascara">REVLON ULTIMATE ALL-IN-ONE MASCARA</string>
    <string name="revlon_volumazing_mascara">REVLON VOLUMAZING MASCARA</string>
    <string name="photoready_cheek_flushing_tint">PHOTOREADY CHEEK FLUSHING TINT</string>
    <string name="colorstay_endless_glow_liquid_highlighter">COLORSTAY ENDLESS GLOW LIQUID HIGHLIGHTER</string>
    <string name="colorstay_concealer">COLORSTAY CONCEALER</string>
    <string name="makeup_concealer">MAKEUP CONCEALER</string>
    <string name="photoready_concealer">PHOTOREADY CONCEALER</string>
    <string name="colorstay_ultimate_lipstick">COLORSTAY ULTIMATE LIPSTICK</string>
    <string name="revlon_cushion_lip_tint">REVLON CUSHION LIP TINT</string>
    <string name="revlon_ultra_hd_matte_lipcolor">REVLON ULTRA HD MATTE LIPCOLOR</string>
    <string name="super_lustrous_lipstick">SUPER LUSTROUS LIPSTICK</string>
    <string name="no_products">No Products</string>
    <string name="add_to_cart">Add to Cart</string>
    <string name="product_detail">Product Detail</string>
    <string name="no_cart">No Cart</string>
    <string name="next">Next</string>
    <string name="please_write_your_shipment_details">Please write your shipment details</string>
    <string name="name">Name</string>
    <string name="address">Address</string>
    <string name="city">City</string>
    <string name="confirm">Confirm</string>
    <string name="add_new_products">add new products</string>
    <string name="check_orders">check orders</string>
    <string name="no_orders">No Orders</string>
    <string name="show_order_products">show order products</string>
    <string name="order_products">Order Products</string>
    <string name="approve_order">Approve Order</string>
    <string name="maintain_products">Maintain Products</string>
    <string name="update_product">update product</string>
    <string name="delete_product">delete product</string>
    <string name="finger_print_login_msg">To access fingerprint authentication, you need to first time account login</string>
    <string name="order_shipped">Order Shipped</string>
</resources>
