<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/nav_home">

    <fragment
        android:id="@+id/nav_home"
        android:name="com.frontiertechnologypartners.beautysecret.ui.admin.ui.HomeFragment"
        android:label="@string/menu_home"
        tools:layout="@layout/fragment_home">
    </fragment>

    <fragment
        android:id="@+id/nav_cart"
        android:name="com.frontiertechnologypartners.beautysecret.ui.admin.ui.GalleryFragment"
        android:label="@string/cart"
        tools:layout="@layout/fragment_gallery">
        <action
            android:id="@+id/action_HomeFragment_to_HomeSecondFragment"
            app:destination="@id/nav_orders" />
    </fragment>

    <fragment
        android:id="@+id/nav_orders"
        android:name="com.frontiertechnologypartners.beautysecret.ui.admin.ui.SlideshowFragment"
        android:label="@string/orders"
        tools:layout="@layout/fragment_slideshow" />
</navigation>