<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.common.HomeFragment">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="2dp"
            android:padding="5dp"
            android:text="@string/brands"
            android:textColor="@color/colorPrimaryDark"
            android:textSize="25sp"
            android:textStyle="bold|italic" />

        <RelativeLayout
            android:id="@+id/maybelline_layout"
            android:layout_width="match_parent"
            android:layout_height="150dp"
            android:layout_marginStart="16dp"
            android:layout_marginEnd="16dp"
            android:background="@drawable/layout_bg">

            <ImageView
                android:layout_width="match_parent"
                android:layout_height="150dp"
                android:alpha="0.5"
                android:contentDescription="@string/imageview"
                android:scaleType="fitXY"
                android:src="@drawable/ic_maybelline" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_alignParentBottom="true"
                android:padding="10dp"
                android:text="@string/maybelline"
                android:textColor="@color/md_white_1000"
                android:textSize="25sp" />

        </RelativeLayout>

        <RelativeLayout
            android:id="@+id/loreal_layout"
            android:layout_width="match_parent"
            android:layout_height="150dp"
            android:layout_marginStart="16dp"
            android:layout_marginTop="10dp"
            android:layout_marginEnd="16dp"
            android:background="@drawable/layout_bg">

            <ImageView
                android:layout_width="match_parent"
                android:layout_height="150dp"
                android:alpha="0.5"
                android:contentDescription="@string/imageview"
                android:scaleType="fitXY"
                android:src="@drawable/loreal" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_alignParentBottom="true"
                android:padding="10dp"
                android:text="@string/l_oreal_paris"
                android:textColor="@color/md_white_1000"
                android:textSize="25sp" />

        </RelativeLayout>

        <RelativeLayout
            android:id="@+id/revlon_layout"
            android:layout_width="match_parent"
            android:layout_height="150dp"
            android:layout_marginStart="16dp"
            android:layout_marginTop="10dp"
            android:layout_marginEnd="16dp"
            android:background="@drawable/layout_bg">

            <ImageView
                android:layout_width="match_parent"
                android:layout_height="150dp"
                android:alpha="0.5"
                android:contentDescription="@string/imageview"
                android:scaleType="fitXY"
                android:src="@drawable/revlon" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_alignParentBottom="true"
                android:padding="10dp"
                android:text="@string/revlon"
                android:textColor="@color/md_white_1000"
                android:textSize="25sp" />

        </RelativeLayout>
    </LinearLayout>
</ScrollView>